# gutil

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  first-time.sh  pyproject.toml  requirement.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml
GDUtilities.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  security.py
backend/app/models/: codex.py  user.py
backend/app/services/: embedding_service.py  llm_service.py  supabase_auth.py  supabase_database.py
cli/: Dockerfile  Dockerfile.dev  Makefile  main.py  requirements.txt
cli/app/core/: config.py  state.py
cli/app/models/: auth.py  llm.py  vectordb.py
cli/app/services/: api_client.py
cli/app/services/llm/: embedding_service.py  llm_service.py
cli/app/services/supabase/: auth.py  database.py  storage.py
cli/codex_cli/: cli.py  embeddings.py  lancedb_store.py
cli/codex_cli/utils/: context_manager.py
cli/commands/: auth.py  config.py  generate.py
cli/services/: __init__.py  api_client.py  local_config.py
cli/utils/: output.py  prompts.py
docs/: CodexCLI.md  CodexRepl.md  ConfigResolver.md  LanceDB.md  ProjectCreator.md  Toolbox.md
gdutilities/: ConfigResolver.py  config_resolver.py
gutil/: CodexBridge.py  LanceDB.py  ProjectCreator.py  ToolboxBridge.py  __main__.py
gutil/codex_cli/: config.yaml
gutil/codex_cli/utils/: context_manager.py  logger.py
(+4 files in other folders)
